# inferno

./: .cirrus.yml  .codecov.yml  .gitattributes  .gitignore  .gitmodules  .gitpod.yml  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  azure-pipelines.yml  compare.sh  flake.nix  test.sh
.github/workflows/: check.yml  coverage.yml  minimal.yml  msrv.yml  scheduled.yml  style.yml  test.yml
_build/: rust-setup.yml
benches/: collapse.rs  flamegraph.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: dtrace.rs  guess.rs  perf.rs  sample.rs
src/: collapse-perf.rs  lib.rs  main.rs  parse.rs
src/collapse/: bpftrace.rs  common.rs  dtrace.rs  ghcprof.rs  guess.rs  matcher.rs  mod.rs  perf.rs  pmc.rs  recursive.rs  sample.rs  vsprof.rs  vtune.rs  xctrace.rs  xdebug.rs
src/collapse/util/: mod.rs
src/diff_folded/: mod.rs
src/differential/: mod.rs
src/flamegraph/: attrs.rs  color.rs  flamegraph.css  flamegraph.js  merge.rs  mod.rs  palettes.rs  rand.rs  svg.rs
src/flamegraph/color/: mod.rs  palette_map.rs  palettes.rs
src/parse/: dtrace.rs
test/: perf-rust-Yamakaky-dcpu.txt
tests/: collapse-dtrace.rs  collapse-ghcprof.rs  collapse-guess.rs  collapse-perf-tests.rs  collapse-perf.rs  collapse-pmc.rs  collapse-recursive.rs  collapse-sample.rs  collapse-vsprof.rs  collapse-vtune.rs  collapse-xctrace.rs  collapse-xdebug.rs  diff-folded.rs  flamegraph-colors.rs  flamegraph-differential.rs  flamegraph-nameattr.rs  flamegraph.rs
tests/collapse_common/: mod.rs
tests/common/: collapse.rs  mod.rs  test_logger.rs
tests/data/: build-inline-counter-data.sh  inline_counter  perf-inline-counter.txt
tests/data/bad-lines/: bad-lines.txt
tests/data/bpftrace/: 1.orig.folded  2.orig.folded  2.trace  3.orig.folded  3.trace  input1.txt  input3.txt
tests/data/collapse-dtrace/: hex-addresses.txt  java.txt  mangled.txt  only-header-lines.txt  rust-names.txt  scope_with_no_argument_list.txt  stack-ustack.txt
tests/data/collapse-dtrace/results/: demangled.txt  demangled_with_offsets.txt  dtrace-example.txt  hex-addresses.txt  java.txt  rust-names.txt  scope_with_no_argument_list.txt  stack-ustack.txt
tests/data/collapse-dtrace/test/: flamegraph-bug.txt  java.txt
tests/data/collapse-ghcprof/: percent.prof  ticks.prof  utf8.prof
tests/data/collapse-ghcprof/results/: percent.txt  ticks.txt  ticks_bytes.txt  ticks_ticks.txt  utf8.txt  utf8_bytes.txt  utf8_ticks.txt
tests/data/collapse-guess/: invalid-perf-with-empty-line-after-event-line.txt  unknown-format.txt
tests/data/collapse-perf/: cpp-stacks-std-function.txt  empty-line.txt  go-stacks.txt  inline-counter.txt  java-inline.txt  mangled.txt  single-event.txt  single-line-stacks.txt  sourcepawn-jitdump.txt  versioned-vmlinux.txt
tests/data/collapse-perf/inline-counter/: build-inline-counter-data.sh  inline-counter
tests/data/collapse-perf/results/: cpp-stacks-std-function-collapsed.txt  demangled.txt  example-perf-stacks-collapsed.txt  go-stacks-collapsed.txt  inline-counter-collapsed-inline+context.txt  inline-counter-collapsed-inline.txt  java-inline-collapsed.txt  perf-rust-Yamakaky-dcpu-collapsed-addrs.txt  perf-rust-Yamakaky-dcpu-collapsed-all.txt  perf-rust-Yamakaky-dcpu-collapsed-jit.txt  perf-rust-Yamakaky-dcpu-collapsed-kernel.txt  perf-rust-Yamakaky-dcpu-collapsed-pid.txt  perf-rust-Yamakaky-dcpu-collapsed-tid.txt  single-event-collapsed.txt  single-line-stacks-collapsed.txt  sourcepawn-jitdump-collapsed-jit.txt  versioned-vmlinux-collapsed-kernel.txt
tests/data/collapse-pmc/: dd.txt  iperf3.txt  shared.txt  shared2.txt  simple.txt  weird-stack-line-bad-count.txt  weird-stack-line-bad-percent.txt  weird-stack-line-no-function-name.txt
tests/data/collapse-pmc/results/: dd-collapsed.txt  iperf3-collapsed.txt  shared-collapsed.txt  shared2-collapsed.txt  simple-collapsed.txt
tests/data/collapse-recursive/: basic.txt
tests/data/collapse-recursive/results/: basic-collapsed.txt  basic.txt
tests/data/collapse-sample/: bad-stack-line.txt  end-before-call-graph-end.txt  end-before-call-graph-start.txt  invalid-samples-field.txt  no-four-spaces.txt  odd-indentation.txt  sample.txt  skipped-indentation.txt  stack-line-only-indent-chars.txt
tests/data/collapse-sample/results/: sample-default.txt  sample-no-modules.txt
tests/data/collapse-vsprof/: CallTreeSummary.csv  incorrect-header.csv  invalid-depth.csv  invalid-function-name.csv  invalid-number-of-calls.csv  missing-function-name.csv
tests/data/collapse-vsprof/results/: vsprof-default.txt
tests/data/collapse-vtune/: bad-stack-line.csv  end-before-header.csv  invalid-time-field.csv  skipped-indentation.csv  vtune.csv
tests/data/collapse-vtune/results/: vtune-default.txt  vtune-no-modules.txt
tests/data/collapse-xctrace/: basic.xml  simple_frame_without_binary_info.xml
tests/data/collapse-xctrace/results/: basic.folded  simple_frame_without_binary_info.folded
tests/data/collapse-xdebug/: xdebug.trace.xt
tests/data/collapse-xdebug/results/: xdebug-default.txt  xdebug-with-filenames.txt
tests/data/diff-folded/: after.txt  bad_before.txt  before.txt  before_fractionals.txt
tests/data/diff-folded/results/: default.txt  fractionals.txt  normalize.txt  strip_hex.txt
tests/data/differential/: perf-cycles-instructions-01-collapsed-all-diff.txt
tests/data/flamegraph/austin/: flames.txt
tests/data/flamegraph/bad-lines/: bad-lines.txt
tests/data/flamegraph/base/: flames.txt
tests/data/flamegraph/colors/: async-profiler-collapsed-part.txt
tests/data/flamegraph/differential/: before-vs-after.txt  difference-widths.txt  self-vs-total.txt  stronger-parents-diff.txt  unbalanced-sampling_more-after.txt  (+1 more)
tests/data/fractional-samples/: tricky-stack.txt
tests/data/inline-counter/: build-inline-counter-data.sh  inline-counter.c  perf-inline-counter.txt
tests/data/multiple-inputs/: perf-vertx-stacks-01-collapsed-all-unsorted-1.txt
tests/data/nameattr/: nameattr.txt
tests/data/results/: perf-inline-counter-collapsed-inline+context.txt  perf-inline-counter-collapsed-inline.txt
tests/data/weird-stack-line/: weird-stack-line.txt
(+24 files in other folders)
